# truenas-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.yaml  tools.json
src/truenas_mcp/: client.py  server.py
