[project]
name = "truenas-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for TrueNAS Middleware"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
truenas-mcp = "truenas_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
